# brief_computer_vision

./: .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  app.py  data.yaml  docker-compose.yml  fire_detections.duckdb  fire_detections.duckdb.wal  main_app.py  modele_hacene.ipynb  modele_test.ipynb  modelisation.ipynb  pyproject.toml  requirements.txt
api_fastapi/: main.py  ml.py
api_fastapi/endpoints/: detect_image.py  detect_webcam.py
fastapi/: main.py
fastapi/endpoints/: detect_image.py  detect_webcam.py
pages/: test_images.py  test_webcams.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train00/: args.yaml
runs/detect/train01/: args.yaml
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
streamlit/: app.py  requirements.txt
streamlit/pages/: test_images.py  test_webcams.py
