[project]
name = "brief-computer-vision"
version = "0.1.0"
description = "entrainement d'un modèle YOLO pour la détection de feu depuis des images, des videos ou une camera en temps réel"
license = "MIT"
authors = [
    {name = "hacene"},
    {name = "Malek BOUMEDINE", email = "malek.boumedine@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
roboflow = ">=1.1.65,<2.0.0"
ultralytics = ">=8.3.148,<9.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
streamlit = ">=1.45.1,<2.0.0"
requests = ">=2.32.3,<3.0.0"
pillow = ">=11.2.1,<12.0.0"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
uvicorn = ">=0.34.3,<0.35.0"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.11.5,<3.0.0"
jose = ">=1.0.0,<2.0.0"
duckdb = ">=1.3.0,<2.0.0"
docker = ">=7.1.0,<8.0.0"
django = ">=5.2.1,<6.0.0"
python-multipart = "^0.0.20"
pycryptodome = "^3.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
